Create link to Home page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,3 +11,8 @@ $navbar-default-bg: #B8B8B8;
   letter-spacing: -1px;
   font-weight: bold;
 }
+
+#logo:hover {
+  color: #fff;
+  text-decoration: none;
+}
