--- a/app/views/alphablog/home.html.erb
+++ b/app/views/alphablog/home.html.erb
@@ -1,5 +1,10 @@
-<h1>Olena's Alphablog</h1>
-<%= link_to 'Alpha blog', articles_path %> | <%= link_to 'About', about_path %>
+
+<div class="jumbotron">
+  <h1>Olena's Alphablog</h1>
+  <%= link_to 'Sign up now', "#", class: "btn btn-primary btn-lg" %>
+</div>
+<%# <%= link_to 'Alpha blog', articles_path %>
+<%# <%= link_to 'About', about_path %>
+<!-- <br>
 <br>
-<br>
-<%= image_tag 'pics.jpg', :size => '1262x560' %>
+<%# <%= image_tag 'pics.jpg', :size => '1262x560' %> -->
