--- a/app/views/alphablog/home.html.erb
+++ b/app/views/alphablog/home.html.erb
@@ -1,5 +1,4 @@
-
-<div class="jumbotron">
+<div class="center jumbotron">
   <h1>Olena's Alphablog</h1>
   <%= link_to 'Sign up now', "#", class: "btn btn-primary btn-lg" %>
 </div>
