--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,3 +20,15 @@ $navbar-default-bg: #B8B8B8;
 .center {
   text-align: center;
 }
+
+.jumbotron {
+  background-image: asset-url('pics.jpg');
+  background-size: cover;
+  height: 680px;
+}
+
+.jumbotron h1 {
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+}
