--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-$navbar-default-bg: #B8B8B8;
+$navbar-default-bg: #9A9A9A;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -24,11 +24,42 @@ $navbar-default-bg: #B8B8B8;
 .jumbotron {
   background-image: asset-url('pics.jpg');
   background-size: cover;
-  height: 680px;
+  height: 650px;
 }
 
 .jumbotron h1 {
   text-align: center;
   margin-bottom: 30px;
   letter-spacing: -1px;
+  text-decoration-color: #2B2B2B;
+}
+
+.btn-xlarge {
+  font-size: 1.5em;
+  background-color: #696969;
+}
+
+footer {
+  margin-top: 1px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+footer a:hover {
+  color: #797979
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float:left;
+  margin-left: 15px;
 }
