--- a/app/views/alphablog/home.html.erb
+++ b/app/views/alphablog/home.html.erb
@@ -1,6 +1,6 @@
-<div class="center jumbotron">
+<div class="center  jumbotron">
   <h1>Olena's Alphablog</h1>
-  <%= link_to 'Sign up now', "#", class: "btn btn-primary btn-lg" %>
+  <%= link_to 'Sign up now', "#", class: "btn btn-primary btn-lg btn-xlarge" %>
 </div>
 <%# <%= link_to 'Alpha blog', articles_path %>
 <%# <%= link_to 'About', about_path %>
