--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -9,20 +9,27 @@
   </ul>
 <% end %>
 
-<%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title %>
-    <br>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %>
-    <br>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<div class='row'>
+  <div class='col-xs-12'>
+    <%= form_for @article do |f| %>
+    <div class="form-group">
+      <div class="control-label col-sm-2">
+        <%= f.label :title %>
+      </div>
+      <div class="col-sm-10">
+        <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
+      </div>
+    </div>
+      <p>
+        <%= f.label :description %>
+        <br>
+        <%= f.text_area :description %>
+      </p>
+      <p>
+        <%= f.submit %>
+      </p>
+    <% end %>
 
-<%= link_to "Back to articles listing", articles_path %>
+    <%= link_to "Back to articles listing", articles_path %>
+ </div>
+</div>
