--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,15 +16,18 @@
       <div class="control-label col-sm-2">
         <%= f.label :title %>
       </div>
-      <div class="col-sm-10">
+      <div class="col-sm-8">
         <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
       </div>
     </div>
-      <p>
+
+    <div class="form-group">
+      <div class="control-label col-sm-2">
         <%= f.label :description %>
-        <br>
-        <%= f.text_area :description %>
-      </p>
+      </div>
+      <div class="col-sm-8">
+        <%= f.text_area :description, class: "form-control", placeholder: "Body of article" %>
+      </div>
       <p>
         <%= f.submit %>
       </p>
