--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -26,13 +26,15 @@
         <%= f.label :description %>
       </div>
       <div class="col-sm-8">
-        <%= f.text_area :description, class: "form-control", placeholder: "Body of article" %>
+        <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article" %>
       </div>
-      <p>
-        <%= f.submit %>
-      </p>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= f.submit class: "btn btn-primary btn-lg" %>
+      </div>
+    </div>
     <% end %>
-
     <%= link_to "Back to articles listing", articles_path %>
  </div>
 </div>
