--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -11,7 +11,7 @@
 
 <div class='row'>
   <div class='col-xs-12'>
-    <%= form_for @article do |f| %>
+    <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
     <div class="form-group">
       <div class="control-label col-sm-2">
         <%= f.label :title %>
