--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -31,10 +31,12 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: "btn btn-primary btn-lg" %>
+        <%= f.submit class: "btn btn-primary btn-sm" %>
       </div>
     </div>
     <% end %>
-    <%= link_to "Back to articles listing", articles_path %>
+    <div class="col-xs-4 col-xs-offset-4">
+      [ <%= link_to "Cancel request and return to articles listing", articles_path %> ]
+    </div>
  </div>
 </div>
