--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,10 @@
-<h1>Showing selected article</h1>
-<p>
-  ID: <%= @article.id %>
-</p>
-
-<p>
-  Title: <%= @article.title %>
-</p>
-
-<p>
-  Description: <%= @article.description %>
-</p>
-
-<%= link_to "Edit this article", edit_article_path(@article) %> |
-<%= link_to "Back to articles listing", articles_path %>
+<h2 align="center">Title: <%= @article.title %></h2>
+<div class="well col-xs-8 col-xs-offset-2">
+  <h4 class="center"><strong>Description:</strong></h4>
+  <hr>
+  <%= simple_format(@article.description) %>
+  <div class="article_actions">
+     <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+     <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
+  </div>
+</div>
