--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,6 +38,12 @@ $navbar-default-bg: #E8E8E8;
   font-size: 1.5em;
   background-color: #696969;
 }
+
+.article-meta-details{
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
+
 .article_actions {
   border-top: 1px solid #eaeaea;
   padding-top: 5px;
