--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,10 +10,13 @@
         <div class="article-body">
           <%= truncate(article.description, length: 100) %>
         </div>
-        <small>Created by: <%= article.user.username if article.user%>,
-                           <%= time_ago_in_words(article.created_at) %> ago,
-             last updated: <%= time_ago_in_words(article.updated_at) %> ago
-        </small>
+        <div class="article-meta-details">
+          <small>Created by: <%= article.user.username if article.user%>,
+                             <%= time_ago_in_words(article.created_at) %> ago,
+               last updated: <%= time_ago_in_words(article.updated_at) %> ago
+          </small>
+        </div>
+
         <div class="article_actions">
            <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
            <%= link_to "Delete this article", article_path(article), method: :delete,
