--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -35,7 +35,7 @@
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: "btn btn-primary btn-sm" %>
+        <%= f.submit "Sign up", class: "btn btn-primary btn-sm" %>
       </div>
     </div>
     <% end %>
