--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1 align="center">Welcom to <%= @user.username%>'s page</h1>
 <div class="row">
   <div class="col-md-4 col-md-offset-4 center">
-    <%= gravatar_for @user %>
+    <%= gravatar_for @user, size: 150 %>
   </div>
 </div>
 
