--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -64,6 +64,12 @@ $navbar-default-bg: #E8E8E8;
   padding-bottom: 15px;
 }
 
+.listing {
+  list-style: none;
+  padding-left: 0;
+
+}
+
 footer {
   margin-top: 1px;
   padding-top: 5px;
