Ready integration test for Categories

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,4 +1,4 @@
-<h1 aling="center">Create new category</h1>
+<h1 align="center">Create new category</h1>
 
 <%= render 'shared/errors', obj: @category %>
 
