--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,11 +1,13 @@
 <h1 align="center">Listing All Categories</h1>
-<% @categories.each do |category| %>
-  <ul class="listing">
-    <div class="row">
-      <div class="well col-md_4 col-md-offset-4">
-        <li class="article-title"></li>
-          <%= link_to "#{category.name}", category_path(category) %>
+<div align="center">
+  <% @categories.each do |category| %>
+    <ul class="listing">
+      <div class="row">
+        <div class="well col-md-4 col-md-offset-4">
+          <li class="article-title"></li>
+            <%= link_to "#{category.name}", category_path(category) %>
+        </div>
       </div>
-    </div>
-  </ul>
-<% end %>
+    </ul>
+  <% end %>
+</div>
