--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -32,10 +32,13 @@
           </li>
         <% end %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <!-- <li><a href="#">Action</a></li> -->
-            <li><%= link_to "New Article", new_article_path %></li>
+            <li><%= link_to "All Categories", categories_path %></li>
+            <% Category.all.each do |category| %>
+              <li><%= link_to "#{category.name}", category_path(category) %></li>
+            <% end %>
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
