--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -39,10 +39,10 @@
             <% Category.all.each do |category| %>
               <li><%= link_to "#{category.name}", category_path(category) %></li>
             <% end %>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <% if logged_in? and current_user.admin? %>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "Create New Category", new_category_path %></li>
+            <% end %>
             <li role="separator" class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
