--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,8 +5,14 @@
       <ul class="listing">
         <div class="row">
           <div class="well col-md-4 col-md-offset-4">
-            <li class="article-title"></li>
+            <li class="article-title">
               <%= link_to "#{category.name}", category_path(category) %>
+            </li>
+           <li>
+             <small>
+               <%= pluralize(category.articles.count, "article") %>
+             </small>
+           </li>
           </div>
         </div>
       </ul>
