--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,8 @@
   <footer class="footer">
     <small>
       Copyright &copy; <a href="https://www.udemy.com/">The Complete Ruby on Rails Developer course</a>
-      by <a href="https://www.mashrurhossain.com/">Mashrur Hossain</a>
+      by <a href="https://github.com/aprioriO">Olena Hulakova</a>
+      <!-- <a href="https://www.mashrurhossain.com/">Mashrur Hossain</a> -->
     </small>
     <nav>
       <ul>
